# azure-sdk-for-c

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  az_iot_twin.c  az_iot_twin.h  build.ps1
sdk/core/core/: CMakeLists.txt  notes.md
sdk/core/core/inc/: az_callback.h  az_core.h  az_curl_adapter.h  az_http.h  az_http_request.h  az_http_request_builder.h  az_http_response.h  az_iter.h  az_iter_from_span.h  az_json.h  az_json_read.h  az_login.h  az_pair.h  az_result.h  az_span.h  az_span_iter.h  az_write_span_iter.h
sdk/core/core/src/: az_core.c  az_curl_adapter.c  az_http_request.c  az_http_request_builder.c  az_http_response.c  az_json.c  az_json_read.c  az_json_string.c  az_login.c  az_span_private.h  az_span_seq.c
sdk/core/core/test/: curl_easy_perform_poc.c  main.c
sdk/iot/: CMakeLists.txt
sdk/iot/inc/: az_iot_hub_client.h  az_iot_hub_client_c2d.h  az_iot_hub_client_methods.h  az_iot_hub_client_properties.h  az_iot_hub_client_sas.h  az_iot_hub_client_telemetry.h  az_iot_hub_client_twin.h  az_iot_hub_connect.h  az_iot_hub_sas.h  az_iot_hub_telemetry.h  az_iot_hub_twin.h  az_iot_provisioning_client.h  az_iot_provisioning_client_register.h  az_iot_provisioning_client_sas.h  az_iot_provisioning_connect.h  az_iot_provisioning_register.h  az_iot_provisioning_sas.h  az_iot_status.h
sdk/iot/samples/: CMakeLists.txt
sdk/iot/samples/iot_core/: iot_hub_telemetry.c
sdk/iot/src/: az_iot_hub_client.c  az_iot_hub_client_c2d.c  az_iot_hub_client_telemetry.c  az_iot_hub_telemetry.c
sdk/storage/ustorageclient/: CMakeLists.txt
(+7 files in other folders)
